0025845: Surface normals to be associated with polygonal source: - IVtkDraw: added ivtkproperty command - IVtkDraw: added vtkPolyDataNormals filter for cells as default